_sources/api/gen/other/2.8.0/classes/domain_OperationUnit.OperationUnit.md.txt
# Class: OperationUnit

[domain/OperationUnit](../modules/domain_OperationUnit.md).OperationUnit

Operation unit corresponds to a vehicle on a case and it is related to the Assigned Resource values from SOS.

## Constructors

### constructor

**new OperationUnit**(`unitId`, `status`, `role`, `source`, `eta`, `reportedInArea`)

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `unitId` | `string` | The unique id of the unit, corresponds to the Resource Id for Assigned Resource from SOS |
| `status` | `string` | The current Status, also corresponds to the Status for Assigned Resource from SOS |
| `role` | `string` | The role of the unit |
| `source` | [`OperationUnitSource`](../enums/domain_OperationUnitSource.OperationUnitSource.md) | The source of the unit |
| `eta` | `Date` | The estimated time of arrival in epoch milliseconds UTC timezone |
| `reportedInArea` | `string` | Corresponds to reportedInArea for Assigned Resource from SOS |

## Properties

### eta

 **eta**: `Date`

The estimated time of arrival in epoch milliseconds UTC timezone

___

### reportedInArea

 **reportedInArea**: `string`

Corresponds to reportedInArea for Assigned Resource from SOS

___

### role

 **role**: `string`

The role of the unit

___

### source

 **source**: [`OperationUnitSource`](../enums/domain_OperationUnitSource.OperationUnitSource.md)

The source of the unit

___

### status

 **status**: `string`

The current Status, also corresponds to the Status for Assigned Resource from SOS

___

### unitId

 **unitId**: `string`

The unique id of the unit, corresponds to the Resource Id for Assigned Resource from SOS

## Methods

### fromJSON

`Static` **fromJSON**(`data`): [`OperationUnit`](domain_OperationUnit.OperationUnit.md)

#### Parameters

| Name | Type |
| :------ | :------ |
| `data` | `any` |

#### Returns

[`OperationUnit`](domain_OperationUnit.OperationUnit.md)
